--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,21 +1,32 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Vore Dash</a>
+    <a routerLink="/" routerLinkActive="active" class="navbar-brand">Vore Dash</a>
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser()">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      @if (accountService.currentUser()) {
+        <li class="nav-item">
+          <a routerLink="/dashboard" routerLinkActive="active" class="nav-link">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/members" routerLinkActive="active" class="nav-link"
+            >Matches</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+        </li>
+      }
     </ul>
 
     <div dropdown class="dropdown" *ngIf="accountService.currentUser()">
-      <a dropdownToggle href="#" class="dropdown-toggle text-light text-decoration-none">Welcome user</a>
+      <a
+        dropdownToggle
+        href="#"
+        class="dropdown-toggle text-light text-decoration-none">
+          Welcome {{ accountService.currentUser()?.username | titlecase }}
+      </a>
       <div *dropdownMenu class="dropdown-menu">
         <a href="#" class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
@@ -23,7 +34,11 @@
       </div>
     </div>
 
-    <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" *ngIf="!accountService.currentUser()">
+    <form
+      #loginForm="ngForm"
+      (ngSubmit)="login()"
+      class="d-flex"
+      *ngIf="!accountService.currentUser()">
       <input
         name="username"
         [(ngModel)]="model.username"
