--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -28,7 +28,7 @@
           Welcome {{ accountService.currentUser()?.username | titlecase }}
       </a>
       <div *dropdownMenu class="dropdown-menu">
-        <a href="#" class="dropdown-item">Edit Profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
         <a href="#" class="dropdown-item" (click)="logout()">Logout</a>
       </div>
